crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_annotation_class.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_annotation_class.py
---
## AST

```
Module(
    ModModule {
        range: 0..246,
        body: [
            ClassDef(
                StmtClassDef {
                    range: 0..26,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("F"),
                        range: 6..7,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 7..10,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 8..9,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 8..9,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: Some(
                        Arguments {
                            range: 10..21,
                            args: [
                                Named(
                                    ExprNamed {
                                        range: 11..20,
                                        target: Name(
                                            ExprName {
                                                range: 11..12,
                                                id: Name("y"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: Name(
                                            ExprName {
                                                range: 16..20,
                                                id: Name("list"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 23..26,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 23..26,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    range: 27..50,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("G"),
                        range: 33..34,
                    },
                    type_params: None,
                    arguments: Some(
                        Arguments {
                            range: 34..45,
                            args: [
                                Yield(
                                    ExprYield {
                                        range: 36..43,
                                        value: Some(
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    range: 42..43,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 47..50,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 47..50,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    range: 51..79,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("H"),
                        range: 57..58,
                    },
                    type_params: None,
                    arguments: Some(
                        Arguments {
                            range: 58..74,
                            args: [
                                YieldFrom(
                                    ExprYieldFrom {
                                        range: 60..72,
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                range: 71..72,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 76..79,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 76..79,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    range: 80..106,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("I"),
                        range: 86..87,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 87..90,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 88..89,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 88..89,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: Some(
                        Arguments {
                            range: 90..101,
                            args: [
                                Yield(
                                    ExprYield {
                                        range: 92..99,
                                        value: Some(
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    range: 98..99,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 103..106,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 103..106,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    range: 107..138,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("J"),
                        range: 113..114,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 114..117,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 115..116,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 115..116,
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: Some(
                        Arguments {
                            range: 117..133,
                            args: [
                                YieldFrom(
                                    ExprYieldFrom {
                                        range: 119..131,
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                range: 130..131,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                            keywords: [],
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                range: 135..138,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 135..138,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    range: 139..165,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("K"),
                        range: 145..146,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 146..160,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 147..159,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 147..148,
                                        },
                                        bound: Some(
                                            Yield(
                                                ExprYield {
                                                    range: 151..158,
                                                    value: Some(
                                                        NumberLiteral(
                                                            ExprNumberLiteral {
                                                                range: 157..158,
                                                                value: Int(
                                                                    1,
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 162..165,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 162..165,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                StmtClassDef {
                    range: 190..215,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("L"),
                        range: 196..197,
                    },
                    type_params: Some(
                        TypeParams {
                            range: 197..210,
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 198..209,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 198..199,
                                        },
                                        bound: Some(
                                            Named(
                                                ExprNamed {
                                                    range: 202..208,
                                                    target: Name(
                                                        ExprName {
                                                            range: 202..203,
                                                            id: Name("x"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    value: NumberLiteral(
                                                        ExprNumberLiteral {
                                                            range: 207..208,
                                                            value: Int(
                                                                1,
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                range: 212..215,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        range: 212..215,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | class F[T](y := list): ...
  |            ^^^^^^^^^ Syntax Error: named expression cannot be used within a generic definition
2 | class G((yield 1)): ...
3 | class H((yield from 1)): ...
  |


  |
1 | class F[T](y := list): ...
2 | class G((yield 1)): ...
  |          ^^^^^^^ Syntax Error: yield expression cannot be used as a base class
3 | class H((yield from 1)): ...
4 | class I[T]((yield 1)): ...
  |


  |
1 | class F[T](y := list): ...
2 | class G((yield 1)): ...
3 | class H((yield from 1)): ...
  |          ^^^^^^^^^^^^ Syntax Error: yield expression cannot be used as a base class
4 | class I[T]((yield 1)): ...
5 | class J[T]((yield from 1)): ...
  |


  |
2 | class G((yield 1)): ...
3 | class H((yield from 1)): ...
4 | class I[T]((yield 1)): ...
  |             ^^^^^^^ Syntax Error: yield expression cannot be used within a generic definition
5 | class J[T]((yield from 1)): ...
6 | class K[T: (yield 1)]: ...      # yield in TypeVar
  |


  |
3 | class H((yield from 1)): ...
4 | class I[T]((yield 1)): ...
5 | class J[T]((yield from 1)): ...
  |             ^^^^^^^^^^^^ Syntax Error: yield expression cannot be used within a generic definition
6 | class K[T: (yield 1)]: ...      # yield in TypeVar
7 | class L[T: (x := 1)]: ...       # named expr in TypeVar
  |


  |
4 | class I[T]((yield 1)): ...
5 | class J[T]((yield from 1)): ...
6 | class K[T: (yield 1)]: ...      # yield in TypeVar
  |             ^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVar bound
7 | class L[T: (x := 1)]: ...       # named expr in TypeVar
  |


  |
5 | class J[T]((yield from 1)): ...
6 | class K[T: (yield 1)]: ...      # yield in TypeVar
7 | class L[T: (x := 1)]: ...       # named expr in TypeVar
  |             ^^^^^^ Syntax Error: named expression cannot be used within a TypeVar bound
  |
